--- a/web-developer.html
+++ b/web-developer.html
@@ -38,6 +38,12 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://foreignpolicy.recruitee.com/o/web-developer'>
+      Web Developer - Foreign Policy
+    </a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
 <h5><a href='https://boards.greenhouse.io/circleci/jobs/4497096002'>Job Application for Senior Engineer - Web Development & Optimization at CircleCI</a></h5> 
 <p><span class="badge badge-light">United States Canada</span></p>
 <p>Posted on: 2019-10-29</p>
@@ -74,7 +80,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Devoteam/743999698372664-web-developer'>Devoteam Web developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Devoteam/743999698372664-web-developer'>Devoteam Web developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Malm?Copenhagen</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -120,7 +126,7 @@
 <p><span class="badge badge-light">Detroit</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Visa/743999698335805-software-engineer-web-applications-ref20023i-visa-digital-developer-platform-vddp-'>Visa Software Engineer, Web Applications (REF20023I) - Visa Digital Developer Platform (VDDP) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Visa/743999698335805-software-engineer-web-applications-ref20023i-visa-digital-developer-platform-vddp-'>Visa Software Engineer, Web Applications (REF20023I) - Visa Digital Developer Platform (VDDP) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -184,7 +190,7 @@ Develop process requirements and implement product development and release
 <p><span class="badge badge-light">Bangalore, India</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://interactive-tools.join.com/jobs/455622-web-developer-typo3-w-m-d'>Job @ interactive tools   (Berlin): Web Developer ... | JOIN</a></h5> 
+<h5><a href='https://interactive-tools.join.com/jobs/455622-web-developer-typo3-w-m-d'>Job @ interactive tools   (Berlin): Web Developer ... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Deutschland  Berlin</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -230,7 +236,7 @@ Develop process requirements and implement product development and release
 <p><span class="badge badge-light">Mountain View, California</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ALRiyad/743999698225244-web-developer'>ALRiyad Web Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/ALRiyad/743999698225244-web-developer'>ALRiyad Web Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -306,7 +312,7 @@ Develop process requirements and implement product development and release
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-25</p>
 <hr/>
-<h5><a href='https://www.php-resource.de/jobs/job,45536,Teamleiter-mwd-WebentwicklungWeb-Development.htm'>Teamleiter (m/w/d) Webentwicklung/Web Development Aktuelle PHP Stellenangebote und jobs  php-resource.de</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.php-resource.de/jobs/job,45536,Teamleiter-mwd-WebentwicklungWeb-Development.htm'>Teamleiter (m/w/d) Webentwicklung/Web Development Aktuelle PHP Stellenangebote und jobs  php-resource.de</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-25</p>
 <hr/>
@@ -343,7 +349,7 @@ finding and telling compelling stories about health, medicine, and scientific?..
 <p><span class="badge badge-light">Cincinnati, OH  Chicago, IL  Denver, CO  Indianapolis, IN  Los Angeles, CA  New York, NY  San Francisco, CA  Washington, DC</span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
-<h5><a href='https://artisantalent.com/jobs/other-locations/senior-design-technologist/46170?utm_content=104068951&utm_medium=social&utm_source=twitter&hss_channel=tw-159227192'>Creative, Digital, Visual, and Marketing Jobs | Find Jobs Here | Web Developers, Programmers, Digital Account Executives</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://artisantalent.com/jobs/other-locations/senior-design-technologist/46170?utm_content=104068951&utm_medium=social&utm_source=twitter&hss_channel=tw-159227192'>Creative, Digital, Visual, and Marketing Jobs | Find Jobs Here | Web Developers, Programmers, Digital Account Executives</a></h5> 
 <p><span class="badge badge-light">Cincinnati, OH  Chicago, IL  Denver, CO  Indianapolis, IN  Los Angeles, CA  New York, NY  San Francisco, CA  Washington, DC</span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
@@ -355,7 +361,7 @@ finding and telling compelling stories about health, medicine, and scientific?..
 <p><span class="badge badge-light">Mexico</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://www.carbonfive.com/careers/?utm_content=104045227&utm_medium=social&utm_source=twitter&hss_channel=tw-16105451'>Web Development, Design &amp; Product Careers | Carbon Five</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.carbonfive.com/careers/?utm_content=104045227&utm_medium=social&utm_source=twitter&hss_channel=tw-16105451'>Web Development, Design &amp; Product Careers | Carbon Five</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
@@ -417,7 +423,7 @@ finding and telling compelling stories about health, medicine, and scientific?..
 <p><span class="badge badge-light">Houston, TX</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://www.proctors.co.uk/careers/angular-front-end-web-developer-0'>Angular Front-End Web Developer | Proctor + Stevenson</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.proctors.co.uk/careers/angular-front-end-web-developer-0'>Angular Front-End Web Developer | Proctor + Stevenson</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
@@ -433,7 +439,7 @@ finding and telling compelling stories about health, medicine, and scientific?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/DenodoTechnologies/743999697932447-java-back-end-front-end-web-developer'>Denodo Technologies Java Back End / Front End Web Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/DenodoTechnologies/743999697932447-java-back-end-front-end-web-developer'>Denodo Technologies Java Back End / Front End Web Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">A Coru?a, Spain</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -451,10 +457,6 @@ finding and telling compelling stories about health, medicine, and scientific?..
 <hr/>
 <h5><a href='http://jobs.jobvite.com/silver-peak/job/o6w1afwx'>Silver Peak Systems Careers - Senior Web Application Developer</a></h5> 
 <p><span class="badge badge-light">Bangalore, India</span></p>
-<p>Posted on: 2019-10-23</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/NorthgatePublicServices/743999697969975-senior-web-developer-angular'>Northgate Public Services Senior Web Developer - Angular | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
 
