--- a/site-reliability-engineer.html
+++ b/site-reliability-engineer.html
@@ -126,7 +126,7 @@
 <p><span class="badge badge-light">Jakarta, Indonesia  Indonesia</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/hingehealth/fc5417af-7309-4e45-82ec-8014b607bba9'>Hinge Health - Senior Site Reliability Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/hingehealth/fc5417af-7309-4e45-82ec-8014b607bba9'>Hinge Health - Senior Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -200,7 +200,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<h5><a href='https://www.okta.com/company/careers/engineering/lead-site-reliability-engineer-staff-principal-1926450/'>Lead Site Reliability Engineer (Staff/Principal) | Okta</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.okta.com/company/careers/engineering/lead-site-reliability-engineer-staff-principal-1926450/'>Lead Site Reliability Engineer (Staff/Principal) | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -277,7 +277,7 @@ customer experience, and increase the overall value of supported applications.</
 <p><span class="badge badge-light">Redwood City</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://theorem.applytojob.com/apply/bYQApJnq23/Experienced-Site-Reliability-Engineer'>Experienced Site Reliability Engineer - Theorem, LLC - Career Page</a></h5> 
+<h5><a href='https://theorem.applytojob.com/apply/bYQApJnq23/Experienced-Site-Reliability-Engineer'>Experienced Site Reliability Engineer - Theorem, LLC - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 6, 2019 ... Experienced Site Reliability Engineer. Remote, Multiple Countries; Full Time; 
 Engineering; Experienced. Share. Theorem is a software consultancy that 
@@ -295,7 +295,7 @@ believes?...</p>
 <p><span class="badge badge-light">Berlin Berlin, Germany  Berlin</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<h5><a href='https://nianticlabs.com/jobs/software-engineer-site-reliability/'>Software Engineer, Site Reliability ? Niantic</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://nianticlabs.com/jobs/software-engineer-site-reliability/'>Software Engineer, Site Reliability ? Niantic</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-20</p>
 <hr/>
@@ -312,7 +312,7 @@ team based in Wellington. At SilverStripe, our mission is to help everyone have?
 <p><span class="badge badge-light">Pune, India</span></p>
 <p>Posted on:: 2019-10-20</p>
 <hr/>
-<h5><a href='http://theorem.applytojob.com/apply/kxRe2aoddH/Experienced-Site-Reliability-Engineer-London'>Experienced Site Reliability Engineer ? London - Theorem, LLC - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://theorem.applytojob.com/apply/kxRe2aoddH/Experienced-Site-Reliability-Engineer-London'>Experienced Site Reliability Engineer ? London - Theorem, LLC - Career Page</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
@@ -336,7 +336,7 @@ team based in Wellington. At SilverStripe, our mission is to help everyone have?
 <p><span class="badge badge-light">Irvine, CA</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/addepar1/jobs/4480912002'>Job Application for Senior Site Reliability Engineer at Addepar</a></h5> 
+<h5><a href='https://boards.greenhouse.io/addepar1/jobs/4480912002'>Job Application for Senior Site Reliability Engineer at Addepar</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... As a SRE Engineer at Addepar, you will utilize your combination of significant 
 Linux experience, network knowledge, scripting abilities, information security and
@@ -364,7 +364,7 @@ Linux experience, network knowledge, scripting abilities, information security a
 Algorithmia makes scalable Machine Learning fast, simple, and cost-effective for
 ?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bittitan/jobs/1921196'>Job Application for Site Reliability Engineer I  at BitTitan</a></h5> 
+<h5><a href='https://boards.greenhouse.io/bittitan/jobs/1921196'>Job Application for Site Reliability Engineer I  at BitTitan</a></h5> 
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
@@ -372,7 +372,7 @@ Algorithmia makes scalable Machine Learning fast, simple, and cost-effective for
 <p><span class="badge badge-light">Sydney Australia</span></p>
 <p>Posted on:: 2019-10-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://golang.cafe/job/senior-software-engineer-or-site-reliability-engineer-micro-1571243556'>Senior Software Engineer or Site Reliability Engineer at Micro</a></h5> 
+<h5><a href='https://golang.cafe/job/senior-software-engineer-or-site-reliability-engineer-micro-1571243556'>Senior Software Engineer or Site Reliability Engineer at Micro</a></h5> 
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on:: 2019-10-17</p>
 <hr/>
@@ -392,7 +392,7 @@ Algorithmia makes scalable Machine Learning fast, simple, and cost-effective for
 <p><span class="badge badge-light">Portland, Oregon  Atlanta, Georgia</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qPW9Vfwz&k=Job&j=ocdLafw4&__jvst=Employee&__jvsd=snvNPgwf&__jvsc=Twitter&bid=nevVbMw6'>Splunk Careers - Senior Site Reliability Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qPW9Vfwz&k=Job&j=ocdLafw4&__jvst=Employee&__jvsd=snvNPgwf&__jvsc=Twitter&bid=nevVbMw6'>Splunk Careers - Senior Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light">Sydney Australia</span></p>
 <p>Posted on:: 2019-10-16</p>
 <hr/>
